--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 </div>
                 <div> 
                     <label for="sale_status">Sale Status:</label>
+                    <input type="">
                     <select id="sale_status" name="sale_status">
                         <option value="">All</option>
                         <option value="on sale">On Sale</option>
